--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -18,7 +18,8 @@
                             href="http://localhost:8080/api/carts/sticker/{{this._id}}"
                         >
                             <button class="btn btn-light justify-self-center">
-                                ADD TO CART</button>
+                                ADD TO CART
+                            </button>
                         </a>
                     </div>
                 </div>
