--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -16,8 +16,15 @@
                 <a href="http://localhost:8080/cart/">
                     <img
                         src="https://res.cloudinary.com/francocastany/image/upload/v1683840222/REKITS/cart-shopping-solid_1_burxbn.svg"
-                        alt="cart"
-                        style="height: 20px;"
+                        alt="Cart"
+                        style="height: 20px; margin-right: 15px;"
+                    />
+                </a>
+                <a href="http://localhost:8080/logout/">
+                    <img
+                        src="https://res.cloudinary.com/francocastany/image/upload/v1684365177/REKITS/right-from-bracket-solid_jwxzbd.svg"
+                        alt="Logout"
+                        style="height: 22px;"
                     />
                 </a>
             </div>
